bulk insert usuarios

--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -146,6 +146,7 @@
 					<button type="button" class="btn btn-primary ms-3">
 						<a href="/report/user/client" target="_blank" class="text-dark">Reporte de clientes</a>
 					</button>
+					<button type="button" class="btn btn-success ms-3 " onclick="bulkInsert()">Bulk Insert</button>
 				</div>
 			</div>
 			<!-- tabla para mostrar los usuarios del sistema -->
