--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -170,6 +170,8 @@
                     <button type="button" class="btn btn-primary ms-3">
                         <a href="/report/products" target="_blank" class="text-dark">Reporte</a>
                     </button>
+
+                    <button type="button" class="btn btn-success" onclick="bulkInsertProducts()">Bulk Insert</button>
                 </div>
             </div>
             <div class="container">
