--- a/views/include/firstUse.ejs
+++ b/views/include/firstUse.ejs
@@ -48,8 +48,8 @@
                     </div>
 
                     <div class="col-12 ">
-                        <label for="admin" class="form-label">Rol</label>
-                        <input type="text" class="form-control" value="admin" id="role" name="rol" readonly required>
+                        <label for="admin" class="form-label" hidden>Rol</label>
+                        <input type="text" class="form-control" hidden value="admin" id="role" name="rol" readonly required>
                     </div>
                     <div class="col12">
                         <button class="w-25 btn btn-primary btn-sm" type="reset">Vaciar campos</button>
