--- a/views/details.ejs
+++ b/views/details.ejs
@@ -30,7 +30,7 @@
                             <td>
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal<%= index %>">
-                                    Launch demo modal
+                                    Detalles
                                 </button>
                                 
                                 <!-- Modal -->
@@ -53,6 +53,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="row">
+                                                        <%= description[index].image %>
                                                         <img src="http://localhost:443/images/<%= description[index].image %>" alt="imagen" srcset="">
                                                     </div>
                                                 </div>
