--- a/views/categorias.ejs
+++ b/views/categorias.ejs
@@ -85,11 +85,11 @@
                                         <%= data.categorie %>
                                     </td>
                                     <td>
-                                        <% if(data.status=='active' ){ %>
-                                            <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'inactive')">Desactivar</button>
-                                            <%} else {%>
-                                                <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'active')">Activar</button>
-                                                <% } %>
+                                        <% if(data.status=='activo' ){ %>
+                                            <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'inactivo')">Desactivar</button>
+                                        <%} else {%>
+                                            <button class="btn btn-primary" onclick="changeStatus('<%= data._id %>', 'activo')">Activar</button>
+                                        <% } %>
                                     </td>
                                     <td>
                                         <button class="btn btn-danger text-light" onclick="deleteCategory('<%= data._id %>')">Eliminar</button>
