--- a/helpers/templates/users.html
+++ b/helpers/templates/users.html
@@ -26,7 +26,7 @@
                                 <p>Mario Edgardo Rios Menjivar</p>
                                 <p>CEO - Lic en Animación Digital y Videojuegos</p>
                                 <p>San Salvador</p>
-                                <p>{{data.date}}</p>
+                                <p>{{data.newDate}}</p>
                             </div>
                         </td>
                     </tr>
