--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
                                             <p class="card-text">CATEGORIA:<%= data.categorie %></p>
                                             <p class="card-text">STOCK:<%= data.stock %></p>
                                             
-                                            <a href="/producto<%= data.product %>" class="btn btn-primary rounded">Ver mas...</a>
+                                            <a href="/producto/<%= data._id %>" class="btn btn-primary rounded">Ver mas...</a>
                                         </div>
                                     </div>
                                 </div>
