--- a/views/usuarios.ejs
+++ b/views/usuarios.ejs
@@ -7,7 +7,7 @@
 						aria-label="breadcrumb">
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="/administracion" class="text-dark">Inicio</a></li>
-							<li class="breadcrumb-item active" aria-current="page">Usarios</li>
+							<li class="breadcrumb-item active" aria-current="page">Usuarios</li>
 						</ol>
 					</nav>
 				</div>
@@ -146,7 +146,7 @@
 					<button type="button" class="btn btn-primary ms-3">
 						<a href="/report/user/client" target="_blank" class="text-dark">Reporte de clientes</a>
 					</button>
-					<button type="button" class="btn btn-success ms-3 " onclick="bulkInsert()">Bulk Insert</button>
+					<button type="button" class="btn btn-success ms-3 " onclick="bulkInsert()">Insercion Multiple</button>
 				</div>
 			</div>
 			<!-- tabla para mostrar los usuarios del sistema -->
