--- a/views/productos.ejs
+++ b/views/productos.ejs
@@ -57,7 +57,7 @@
                                                 <select class="form-select" id="categorie" name="categorie"
                                                     required>
                                                     <% categories.forEach((data)=> { %>
-                                                        <% if(data.status=='active' ) { %>
+                                                        <% if(data.status=='activo' ) { %>
                                                             <option value="<%= data.categorie %>">
                                                                 <%= data.categorie %>
                                                             </option>
