--- a/views/producto.ejs
+++ b/views/producto.ejs
@@ -1,4 +1,4 @@
-<% if( products.status=='inactive' ){ %>
+<% if( products.status=='inactivo' ){ %>
     <%- include('include/error402') %>
         <% } else { %>
             <!-- Espacio para poder mostrar el producto que el usuario ha 
