--- a/views/viewPorducts.ejs
+++ b/views/viewPorducts.ejs
@@ -6,15 +6,17 @@
             <div class="row ms-4 mb-5">
                 <!-- espacio para productos -->
                 <% products.forEach((product)=> { %>
-                    <div class="card ms-4 mt-4 col-2" style="width: 18rem;">
-                        <img src="/images/<%= product.image[0] %>" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title text-center">
-                                <%= product.product %>
-                            </h5>
-                            <a href="/producto/<%= product._id %>" class="btn btn-primary" id="vwproduct">Ver producto</a>
+                    <% if (product.status != 'inactivo' ){ %>
+                        <div class="card ms-4 mt-4 col-2" style="width: 18rem;">
+                            <img src="/images/<%= product.image[0] %>" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">
+                                    <%= product.product %>
+                                </h5>
+                                <a href="/producto/<%= product._id %>" class="btn btn-primary" id="vwproduct">Ver producto</a>
+                            </div>
                         </div>
-                    </div>
+                    <% } %>
                 <% }) %>
             </div>
         </main>
